--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ management.endpoints.web.exposure.include=*
 
 #we can close all endpoints by exclude
 #management.endpoints.web.exposure.exclude=health, info
+#database connection config
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=rootroot
